fix: fix tooltip border and alignment of question mark icon

--- a/packages/website/styles/table.css
+++ b/packages/website/styles/table.css
@@ -218,6 +218,12 @@
 .rc-tooltip.table-tooltip {
   opacity: 1;
   max-width: 40ch;
+  background-color: transparent;
+}
+
+.rc-tooltip-inner {
+  border: none !important;
+  border-radius: 0 !important;
 }
 
 .rc-tooltip.table-tooltip .rc-tooltip-content {
